--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Obsidian Second Brain",
-  "short_name": "Obsidian Second Brain",
+  "name": "Second Brain 🧠",
+  "short_name": "Second Brain 🧠",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
